--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  calendar_timeline: ^1.0.5
-  icalendar_parser: ^1.0.2
   json_annotation: ^4.7.0
   http: ^0.13.5
+  intl: ^0.17.0
+
 
 
 dev_dependencies:
